# nsfw-game-engine-from-scratch

./: CMakeLists.txt  build-debug.bat  build-release.bat  readme.md
include/: Entity.hpp  RenderWindow.hpp  Vector2d.hpp
src/: Vector2d.cpp  entity.cpp  main.cpp  renderwindow.cpp
